<!-- Fragment untuk HomeMobility -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_mobility" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/welcome_sight_hub"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/QRCodeGeneratorBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/heading"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_back"
        android:text="@string/generate_code"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/QRCodeScannerBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/scan_code"
        android:textAllCaps="false"
        android:layout_below="@+id/QRCodeGeneratorBtn"
        android:background="@drawable/button_back" />

</RelativeLayout>
